added a picture of me

--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
 <main class="form-signin w-100 m-auto">
   <form method="post" action="/">
 
-    <!-- Add an image of yourself here later -->
+    <img src="image/me" alt="Saint's weird picture">
 
     <h1 class="h3 mb-3 fw-normal">Signup to My Newsletter!</h1>
     
