added my image and a div around it and the h1

--- a/signup.html
+++ b/signup.html
@@ -18,10 +18,11 @@
 
 <main class="form-signin w-100 m-auto">
   <form method="post" action="/">
+    <div class="picture">
+      <img src="image/me.png" alt="Saint's weird picture" class="picture">
 
-    <img src="image/me" alt="Saint's weird picture">
-
-    <h1 class="h3 mb-3 fw-normal">Signup to My Newsletter!</h1>
+      <h1 class="h3 mb-3 fw-normal signup-text">Signup to My Newsletter!</h1>
+    </div>
     
     <div>
         <input type="text" name="fName" class="form-control top" placeholder="First name" required autofocus>
